[gd_scene load_steps=18 format=2]

[ext_resource path="res://Godot Ylesanne 07.gd" type="Script" id=1]
[ext_resource path="res://KVP.png" type="Texture" id=2]
[ext_resource path="res://Trance - 009 Sound System Dreamscape (HD).ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 15
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=12]
size = 35
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://ComicSansMS3.ttf"

[sub_resource type="DynamicFont" id=14]
size = 23
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 13 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="kaarid" type="Button" parent="background"]
anchor_right = 0.007
anchor_bottom = 0.022
margin_left = 292.0
margin_top = 233.0
margin_right = 410.267
margin_bottom = 251.88
custom_fonts/font = SubResource( 2 )
text = "Kaarid"

[node name="kivi" type="Button" parent="background"]
anchor_right = 0.015
anchor_bottom = 0.022
margin_left = 65.0
margin_top = 102.0
margin_right = 181.715
margin_bottom = 143.88
custom_fonts/font = SubResource( 4 )
text = "Kivi"

[node name="paber" type="Button" parent="background"]
anchor_right = 0.015
anchor_bottom = 0.022
margin_left = 58.0
margin_top = 408.0
margin_right = 152.715
margin_bottom = 432.88
custom_fonts/font = SubResource( 6 )
text = "Paber"

[node name="P1punktid" type="RichTextLabel" parent="background"]
margin_left = 333.0
margin_top = 395.0
margin_right = 428.0
margin_bottom = 454.0
custom_fonts/normal_font = SubResource( 8 )

[node name="P2punktid" type="RichTextLabel" parent="background"]
margin_left = 469.0
margin_top = 399.0
margin_right = 550.0
margin_bottom = 460.0
custom_fonts/normal_font = SubResource( 10 )

[node name="P1valis" type="RichTextLabel" parent="background"]
margin_left = 287.0
margin_top = 347.0
margin_right = 412.0
margin_bottom = 387.0

[node name="P2valis" type="RichTextLabel" parent="background"]
margin_left = 655.0
margin_top = 134.0
margin_right = 777.0
margin_bottom = 174.0

[node name="Voitjaon" type="RichTextLabel" parent="background"]
anchor_right = 0.015
anchor_bottom = 0.022
margin_left = 373.0
margin_top = 101.0
margin_right = 533.715
margin_bottom = 221.88
rect_clip_content = false
focus_mode = 2
custom_fonts/normal_font = SubResource( 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="uus_mang" type="Button" parent="background"]
margin_left = 590.0
margin_top = 323.0
margin_right = 811.0
margin_bottom = 362.0
custom_fonts/font = SubResource( 14 )
text = "alusta mangu uuesti"

[node name="009 dreamscape" type="AudioStreamPlayer" parent="background"]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="background/kaarid" to="." method="_on_kaarid_pressed"]
[connection signal="pressed" from="background/kivi" to="." method="_on_kivi_pressed"]
[connection signal="pressed" from="background/paber" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="background/uus_mang" to="." method="_on_uus_mang_pressed"]
